Name: William Lai
Date: 01-07-2014
Description: Merged restruct back into master, following changes listed are for the previous three commits together
    * src/chess/ComputerPlayer.java: Now a superclass of StandardComputerPlayer and LosersComputerPlayer.
    * src/chess/Definitions.java: Fixed a subtle bug in finding orthogonal attacks that was causing orthogonal moves to be calculated incorrectly on 6 squares on the b-file
    * src/chess/GameApplet.java: Removed duplicate call of instantiating thread, which was causing everything to be happening doubly
    * src/chess/HumanPlayer.java: Now a superclass of StandardHumanPlayer and LosersComputerPlayer.
    * src/chess/LosersChessBoard.java: Fixed bug that was causing the capture of kings to be handled improperly
    * src/chess/LosersChessGame.java: Now correctly ends game with proper message.

Name: Vincent Wong
Date: 01-05-2014
Description: Separated graphics tasks from GameApplet, revamped how animation is done
    * src/chess/GameApplet.java: Adds GameGraphics as a JPanel which handles _all_ painting
    * src/chess/StandardChessGameGraphics.java: Handles move animation internally in a non-blocking manner

Name: William Lai
Date: 01-01-2014
Description: Implemented Loser's Chess
    * src/chess/ComputerPlayer.java: Added AI logic for Loser's Chess
    * src/chess/Definitions.java: Made isAttacked function more flexible
    * src/chess/HumanPlayer.java: Now handles Loser's Chess move selections
    * src/chess/StandardChessBoard.java: Moved all of processMove into StandardChessBoard from StandardChessGame
    * src/chess/StandardChessGame.java: Moved all of processMove into StandardChessBoard from StandardChessGame
    * src/chess/LosersChessBoard.java: Board for Loser's Chess
    * src/chess/LosersChessGame.java: Game for Loser's Chess
    * src/chess/Main.java: New class for running as standalone app (since there are now multiple game choices)

Name: Vincent Wong
Date: 12-31-2013